src/main/java/com/SandboxStack.template.json
{
  "Resources": {
    "birenziB67DAC03": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": false,
        "EnableDnsSupport": false,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/Resource"
      }
    },
    "birenziwebSubnet1SubnetAC372811": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/19",
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "web"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet1/Subnet"
      }
    },
    "birenziwebSubnet1RouteTable6662A74A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet1/RouteTable"
      }
    },
    "birenziwebSubnet1RouteTableAssociation94CAF2E8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziwebSubnet1RouteTable6662A74A"
        },
        "SubnetId": {
          "Ref": "birenziwebSubnet1SubnetAC372811"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet1/RouteTableAssociation"
      }
    },
    "birenziwebSubnet1DefaultRoute2C90572F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziwebSubnet1RouteTable6662A74A"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "birenziIGWF4CDB8F7"
        }
      },
      "DependsOn": [
        "birenziVPCGW59F66A1E"
      ],
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet1/DefaultRoute"
      }
    },
    "birenziwebSubnet1EIP438FE1D9": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet1/EIP"
      }
    },
    "birenziwebSubnet1NATGatewayE8F3217D": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "birenziwebSubnet1EIP438FE1D9",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "birenziwebSubnet1SubnetAC372811"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet1/NATGateway"
      }
    },
    "birenziwebSubnet2SubnetC551E797": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.32.0/19",
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "web"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet2/Subnet"
      }
    },
    "birenziwebSubnet2RouteTable64569CBC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet2/RouteTable"
      }
    },
    "birenziwebSubnet2RouteTableAssociation2502AFFB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziwebSubnet2RouteTable64569CBC"
        },
        "SubnetId": {
          "Ref": "birenziwebSubnet2SubnetC551E797"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet2/RouteTableAssociation"
      }
    },
    "birenziwebSubnet2DefaultRoute11BC21B3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziwebSubnet2RouteTable64569CBC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "birenziIGWF4CDB8F7"
        }
      },
      "DependsOn": [
        "birenziVPCGW59F66A1E"
      ],
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet2/DefaultRoute"
      }
    },
    "birenziwebSubnet2EIPDB08EFF7": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet2/EIP"
      }
    },
    "birenziwebSubnet2NATGatewayADB6081F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "birenziwebSubnet2EIPDB08EFF7",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "birenziwebSubnet2SubnetC551E797"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/webSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/webSubnet2/NATGateway"
      }
    },
    "birenziapplicationSubnet1Subnet5D14956B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/19",
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/applicationSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet1/Subnet"
      }
    },
    "birenziapplicationSubnet1RouteTable61CBCC87": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/applicationSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet1/RouteTable"
      }
    },
    "birenziapplicationSubnet1RouteTableAssociation94CF7434": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziapplicationSubnet1RouteTable61CBCC87"
        },
        "SubnetId": {
          "Ref": "birenziapplicationSubnet1Subnet5D14956B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet1/RouteTableAssociation"
      }
    },
    "birenziapplicationSubnet1DefaultRouteC2032718": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziapplicationSubnet1RouteTable61CBCC87"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "birenziwebSubnet1NATGatewayE8F3217D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet1/DefaultRoute"
      }
    },
    "birenziapplicationSubnet2Subnet7E09AD49": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.96.0/19",
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/applicationSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet2/Subnet"
      }
    },
    "birenziapplicationSubnet2RouteTableC26F6C1C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/applicationSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet2/RouteTable"
      }
    },
    "birenziapplicationSubnet2RouteTableAssociation942D50A2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziapplicationSubnet2RouteTableC26F6C1C"
        },
        "SubnetId": {
          "Ref": "birenziapplicationSubnet2Subnet7E09AD49"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet2/RouteTableAssociation"
      }
    },
    "birenziapplicationSubnet2DefaultRoute1924F76A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenziapplicationSubnet2RouteTableC26F6C1C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "birenziwebSubnet2NATGatewayADB6081F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/applicationSubnet2/DefaultRoute"
      }
    },
    "birenzirdsSubnet1SubnetC08C1DC7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/19",
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/rdsSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/rdsSubnet1/Subnet"
      }
    },
    "birenzirdsSubnet1RouteTableB9CA3153": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/rdsSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/rdsSubnet1/RouteTable"
      }
    },
    "birenzirdsSubnet1RouteTableAssociation3A1234AA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenzirdsSubnet1RouteTableB9CA3153"
        },
        "SubnetId": {
          "Ref": "birenzirdsSubnet1SubnetC08C1DC7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/rdsSubnet1/RouteTableAssociation"
      }
    },
    "birenzirdsSubnet2SubnetEDA2D135": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.160.0/19",
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/rdsSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/rdsSubnet2/Subnet"
      }
    },
    "birenzirdsSubnet2RouteTableA1FBD7CF": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi/rdsSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/rdsSubnet2/RouteTable"
      }
    },
    "birenzirdsSubnet2RouteTableAssociationC0D3F643": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "birenzirdsSubnet2RouteTableA1FBD7CF"
        },
        "SubnetId": {
          "Ref": "birenzirdsSubnet2SubnetEDA2D135"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/rdsSubnet2/RouteTableAssociation"
      }
    },
    "birenziIGWF4CDB8F7": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "SandboxStack/birenzi"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/IGW"
      }
    },
    "birenziVPCGW59F66A1E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "birenziB67DAC03"
        },
        "InternetGatewayId": {
          "Ref": "birenziIGWF4CDB8F7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "SandboxStack/birenzi/VPCGW"
      }
    }
  }
}
